# nrbf-parser

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: parse_meta.rs  round_trip.rs
src/: decoder.rs  encoder.rs  error.rs  interleaved.rs  lib.rs  records.rs
